# pearson-pdf

./: .coveragerc  .gitignore  LICENSE  README.md  ci.nix  flake.nix  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml
pearson-pdf/: __init__.py  __main__.py
pearson_pdf/: __init__.py  __main__.py
tests/: test_functions.py  test_main.py
