[tool.poetry]
name = "pearson-pdf"
version = "1.1.1"
description = "Tool to download Pearson books as PDFs."
authors = ["Joel <joel@joel.tokyo>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.2"
requests = "^2.26.0"
Pillow = "^8.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
python-dotenv = "^0.19.0"
flake8 = "^3.9.2"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
