[tool.poetry]
name = "pearson-pdf"
version = "1.4.0"
description = "Tool to download Pearson books as PDFs."
authors = ["Joel <joel@joel.tokyo>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jyooru/pearson-pdf"
repository = "https://github.com/jyooru/pearson-pdf"
keywords = ["pearson", "ebook", "pdf"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
exclude = ["tests"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
Pillow = ">=8.3.2,<10.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
python-dotenv = "^0.19.2"
flake8 = "^4.0.1"
black = "^21.12b0"
pytest-cov = "^3.0.0"
Faker = "^11.3.0"
isort = "^5.9.3"
mypy = "^0.931"
types-requests = "^2.27.7"

[tool.poetry.scripts]
pearson-pdf = "pearson_pdf.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.mypy]
install_types = true
ignore_missing_imports = true
non_interactive = true
strict = true
